implémentation méthode de bissection

--- a/methode_brent.ipynb
+++ b/methode_brent.ipynb
@@ -11,6 +11,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff3c189c",
+   "metadata": {},
+   "source": [
+    "# Méthode de la bissection #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d0bb557",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bisection_method(a, b, f, tol=1e-5, max_iter=1000):\n",
+    "    if f(a) * f(b) >= 0:\n",
+    "        raise ValueError(\"f(a) et f(b) doivent avoir des signes opposés\")\n",
+    "\n",
+    "    for i in range(max_iter):\n",
+    "        m = (a + b) / 2\n",
+    "        if abs(f(m)) < tol or (b - a) / 2 < tol:\n",
+    "            return m\n",
+    "        if f(m) * f(a) < 0:\n",
+    "            b = m\n",
+    "        else:\n",
+    "            a = m\n",
+    "\n",
+    "    raise RuntimeError(\"Nombre d'itérations maximum atteint sans convergence\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f479ed",
+   "metadata": {},
+   "source": [
+    "# Méthode de Brent #"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e3879d4",
