methode brent et bissection testées

--- a/methode_brent.ipynb
+++ b/methode_brent.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "3d0bb557",
    "metadata": {},
    "outputs": [],
@@ -53,31 +53,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "7e3879d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def methode_brent(f, intervalle:tuple, tolerance):\n",
+    "def methode_brent(f, intervalle, tolerance):\n",
     "    x = np.array(intervalle)\n",
     "    y = np.array([f(x[0]), f(x[1])])\n",
+    "\n",
     "    if np.sum(np.sign(y)) != 0:\n",
     "        raise Exception(\"Les valeurs aux bornes choisies ne sont pas de signes opposés\")\n",
     "    \n",
     "    # Échange a et b, car b doit représenté la meilleur approximation de la racine\n",
-    "    elif np.abs(y[0]) < np.abs(y[1]):\n",
-    "        x = np.array([x[1], x[0]])\n",
-    "        y = np.array([y[1], y[0]])\n",
+    "    if abs(y[0]) < abs(y[1]):\n",
+    "        x = x[::-1]\n",
+    "        y = y[::-1]\n",
     "\n",
     "    # Définition variables\n",
     "    a = x[0]\n",
     "    b = c = x[1]\n",
     "    fa = y[0]\n",
     "    fb = fc = y[1]\n",
+    "    d = 0\n",
     "    # Paramètre déterminant si la méthode de dichotomie ou d'interpolation a été retenue précédemment\n",
     "    dicho = True\n",
     "\n",
-    "    while fb != 0 or np.abs(b-a)> tolerance:\n",
+    "    while abs(fb) > tolerance and np.abs(b-a)> tolerance:\n",
     "        # Calcul de s avec interpolation quadratique inverse ou avec méthode des sécantes\n",
     "        if fa != fb and fa != fc and fb != fc:\n",
     "            s = (a*fb*fc)/((fa-fb)*(fa-fc)) + (b*fa*fc)/((fb-fa)*(fb-fc)) + (c*fa*fb)/((fc-fa)*(fc-fb)) \n",
@@ -86,12 +88,12 @@
     "         \n",
     "        # Conditions pour utilisé le point milieu calculé avec la méthode de dichotomie plutôt que s calculé avec l'interpolation\n",
     "        # Certaines conditions dépendent de la méthode utilisée à l'itération précedente soit le paramètre dicho\n",
-    "        cond1 = (s-(3*a+b)/4)*(s-b) >= 0\n",
-    "        cond2 = dicho and abs(s-b) >= 0.5*abs(b-c)\n",
-    "        cond3 = not dicho and abs(s-b) >= 0.5*abs(c-d)\n",
+    "        cond1 = (s - (3*a + b)/4)*(s - b) >= 0\n",
+    "        cond2 = dicho and abs(s - b) >= 0.5*abs(b - c)\n",
+    "        cond3 = not dicho and abs(s - b) >= 0.5*abs(c - d)\n",
     "        \n",
     "        if cond1 or cond2 or cond3:\n",
-    "            s = (a+b)/2\n",
+    "            s = (a + b)/2\n",
     "            dicho = True\n",
     "        else:\n",
     "            dicho = False\n",
@@ -99,26 +101,49 @@
     "        # Modification variable pour prochaine itération\n",
     "        d = c\n",
     "        c = b\n",
+    "        fc = fb\n",
     "        \n",
     "        # Choix du nouveau contrepoint afin que f(a+1) et f(b+1) soient de signes opposés\n",
     "        fs = f(s)\n",
     "        if fa*fs < 0:\n",
     "            b = s\n",
+    "            fb = fs\n",
     "        else:\n",
     "            a = s\n",
+    "            fa = fs\n",
     "        \n",
     "        # S'assure que b est la meilleur approximation de la racine\n",
-    "        x_bornes = np.array([a, b])\n",
-    "        y_bornes = np.array([f(a), f(b)])\n",
-    "        if abs(y_bornes[0]) < abs(y_bornes[1]):\n",
-    "            x_bornes = np.array([x_bornes[1], x_bornes[0]])\n",
-    "            y_bornes = np.array([y_bornes[1], y_bornes[0]])\n",
-    "        a = x_bornes[0]\n",
-    "        b = x_bornes[1]\n",
-    "        fa = y_bornes[0]\n",
-    "        fb = y_bornes[1]\n",
+    "        if abs(fa) < abs(fb):\n",
+    "            a, b = b, a\n",
+    "            fa, fb = fb, fa\n",
     "\n",
     "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "3676bc9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.521379706804822\n",
+      "1.5213797032833103\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return x**3 - x - 2\n",
+    "\n",
+    "# Test de la méthode sur [1, 2] avec une tolérance de 1e-8\n",
+    "racine_approx = methode_brent(f, (1, 2), 1e-8)\n",
+    "a = bisection_method(1.4, 1.6, f, tol=1e-8)\n",
+    "print(racine_approx)\n",
+    "print(a)"
    ]
   }
  ],
