Changement notation IQI

--- a/methode_brent.ipynb
+++ b/methode_brent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 161,
    "id": "e5b0c2c1",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 162,
    "id": "3d0bb557",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 163,
    "id": "e1118370",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 164,
    "id": "76716542",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 165,
    "id": "7e3879d4",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 168,
    "id": "3676bc9d",
    "metadata": {},
    "outputs": [
@@ -258,8 +258,8 @@
     "    return np.tan(x)-x\n",
     "\n",
     "# Test de la méthode sur [1, 2] avec une tolérance de 1e-8\n",
-    "racine_approx = methode_brent(f, 1, 2, 1e-8)\n",
-    "a = methode_bissection(f, 1, 2, tol=1e-8)\n",
+    "racine_approx = methode_brent(f, 1, 2)\n",
+    "a = methode_bissection(f, 1, 2)\n",
     "b = methode_secante(f, 1, 2)\n",
     "c = methode_dekker(f, 1, 2)\n",
     "print(racine_approx)\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 167,
    "id": "4608004a",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
       "[-2.15 -1.42 -1.29 -0.2   0.1   0.14  0.82  1.1   1.5   2.85  3.8 ]\n",
       "[1.23350e-02 1.22439e-01 1.83396e-01 9.62973e-01 9.92804e-01 9.77224e-01\n",
       " 5.23455e-01 2.93345e-01 1.05332e-01 3.94000e-04 1.40000e-06]\n",
-      "<scipy.interpolate._cubic.CubicSpline object at 0x0000025C598C1C70>\n"
+      "<scipy.interpolate._cubic.CubicSpline object at 0x0000025C59871AF0>\n"
      ]
     },
     {
