--- a/methode_brent.ipynb
+++ b/methode_brent.ipynb
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 573,
    "id": "adcacafb",
    "metadata": {},
    "outputs": [
@@ -569,16 +569,21 @@
      "output_type": "stream",
      "text": [
       "1.0000096448756775\n",
-      "                Racine trouvée Nombre d'itérations       Temps d'éxecution\n",
-      "Dichotomie  0.2499999999963621                  36   8.719999459572136e-05\n",
-      "Sécante                3934.75                  90  0.00017899999511428177\n",
-      "Dekker                    1.25                   7   2.910001785494387e-05\n",
-      "Brent       0.2500000000074259                   6   3.630001447163522e-05\n",
-      "                Racine trouvée Nombre d'itérations       Temps d'éxecution\n",
-      "Dichotomie           0.9921875                   7  2.3200002033263445e-05\n",
-      "Sécante     1.0092880370898374                  35   3.689998993650079e-05\n",
-      "Dekker      1.0092880370898374                  35   5.930001498199999e-05\n",
-      "Brent       0.9969664348966029                  14    4.81999886687845e-05\n"
+      "                Racine trouvée Nombre d'itérations\n",
+      "Dichotomie  0.2499999999963621                  36\n",
+      "Sécante                3934.75                  90\n",
+      "Dekker                    1.25                   7\n",
+      "Brent       0.2500000000074259                   6\n",
+      "                Racine trouvée Nombre d'itérations\n",
+      "Dichotomie           0.9921875                   7\n",
+      "Sécante     1.0092880370898374                  35\n",
+      "Dekker      1.0092880370898374                  35\n",
+      "Brent       0.9969664348966029                  14\n",
+      "                Racine trouvée Nombre d'itérations\n",
+      "Dichotomie  1.0000000000232832                  35\n",
+      "Sécante                   -0.5                   9\n",
+      "Dekker      0.9999999999999989                   9\n",
+      "Brent       0.9999999999999996                   8\n"
      ]
     }
    ],
@@ -592,6 +597,9 @@
     "def f3(x):\n",
     "    return np.cos(2*np.pi*x)\n",
     "\n",
+    "def f4(x):\n",
+    "    return 2 * x**2 - x - 1\n",
+    "\n",
     "\n",
     "print(methode_secante(f1, 0, 1.5)[0])\n",
     "# Autres méthodes ne fontionnent pas, car les bornes n'ont pas de signes opposés\n",
@@ -600,25 +608,20 @@
     "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
     "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
     "racines = []\n",
-    "temps_exec = []\n",
     "nb_iter = []\n",
     "convergence = []\n",
     "\n",
     "for fct in liste_fct:\n",
-    "    debut = perf_counter()\n",
     "    racine, n, conv = fct(f3, 0, 1.35)\n",
-    "    fin = perf_counter()\n",
-    "    temps = fin - debut\n",
+    "    \n",
     "    \n",
     "    racines.append(f\"{racine}\")\n",
     "    nb_iter.append(f\"{n}\")\n",
-    "    temps_exec.append(f\"{temps}\")\n",
     "    convergence.append(conv)\n",
     "\n",
     "data = {\n",
     "    \"Racine trouvée\": racines,\n",
     "    \"Nombre d'itérations\": nb_iter,\n",
-    "    \"Temps d'éxecution\": temps_exec,\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data, index=noms)\n",
@@ -627,25 +630,40 @@
     "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
     "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
     "racines = []\n",
-    "temps_exec = []\n",
     "nb_iter = []\n",
     "convergence = []\n",
     "\n",
     "for fct in liste_fct:\n",
-    "    debut = perf_counter()\n",
     "    racine, n, conv = fct(f2, -3, 4)\n",
-    "    fin = perf_counter()\n",
-    "    temps = fin - debut\n",
     "    \n",
     "    racines.append(f\"{racine}\")\n",
     "    nb_iter.append(f\"{n}\")\n",
-    "    temps_exec.append(f\"{temps}\")\n",
     "    convergence.append(conv)\n",
     "\n",
     "data = {\n",
     "    \"Racine trouvée\": racines,\n",
     "    \"Nombre d'itérations\": nb_iter,\n",
-    "    \"Temps d'éxecution\": temps_exec,\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data, index=noms)\n",
+    "print(df)\n",
+    "\n",
+    "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
+    "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
+    "racines = []\n",
+    "nb_iter = []\n",
+    "convergence = []\n",
+    "\n",
+    "for fct in liste_fct:\n",
+    "    racine, n, conv = fct(f4, -0.4, 2)\n",
+    "    \n",
+    "    racines.append(f\"{racine}\")\n",
+    "    nb_iter.append(f\"{n}\")\n",
+    "    convergence.append(conv)\n",
+    "\n",
+    "data = {\n",
+    "    \"Racine trouvée\": racines,\n",
+    "    \"Nombre d'itérations\": nb_iter,\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data, index=noms)\n",
