--- a/methode_brent.ipynb
+++ b/methode_brent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 2,
    "id": "e5b0c2c1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3d0bb557",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 4,
    "id": "e1118370",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 5,
    "id": "76716542",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 6,
    "id": "7e3879d4",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 7,
    "id": "4608004a",
    "metadata": {},
    "outputs": [
@@ -315,12 +315,12 @@
    "id": "95a4d689",
    "metadata": {},
    "source": [
-    "# Résultats #"
+    "# Résultats - Convergence et Précision #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b8ba5f7a",
    "metadata": {},
    "outputs": [
@@ -328,12 +328,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.158176406166283\n",
       "                Racine trouvée Nombre d'itérations       Temps d'éxecution  \\\n",
-      "Dichotomie   2.158176407217979                  26   0.0002658999874256551   \n",
-      "Sécante      2.158176406584893                   9  0.00013020000187680125   \n",
-      "Dekker       2.158176406193377                   8  0.00013530001160688698   \n",
-      "Brent       2.1581764061662834                   7  0.00016039999900385737   \n",
+      "Dichotomie   2.158176407217979                  26  0.00038049998693168163   \n",
+      "Sécante      2.158176406584893                   9  0.00018069997895509005   \n",
+      "Dekker       2.158176406193377                   8  0.00021520000882446766   \n",
+      "Brent       2.1581764061662834                   7  0.00017079999088309705   \n",
       "\n",
       "                     Écart relatif  \n",
       "Dichotomie  4.8730773840587336e-08  \n",
@@ -359,10 +358,10 @@
       "\n",
       "\n",
       "               Racine trouvée Nombre d'itérations       Temps d'éxecution  \\\n",
-      "Dichotomie  2.826723718643188                  22  0.00022869999520480633   \n",
-      "Sécante     2.826723715791775                   5   6.709998706355691e-05   \n",
-      "Dekker      2.826723715791775                   5  0.00029070000164210796   \n",
-      "Brent       2.826723715796209                   5   0.0001086000120267272   \n",
+      "Dichotomie  2.826723718643188                  22  0.00016530000721104443   \n",
+      "Sécante     2.826723715791775                   5    8.13000078778714e-05   \n",
+      "Dekker      2.826723715791775                   5   7.989999721758068e-05   \n",
+      "Brent       2.826723715796209                   5   9.210000280290842e-05   \n",
       "\n",
       "                     Écart relatif  \n",
       "Dichotomie  1.0086529764251262e-07  \n",
@@ -433,134 +432,52 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "# Deuxième racine avec intervalle plus petit (2.7, 2.9)\n",
-    "ref = brentq(cubic_spline, 2.7, 2.9, xtol=1e-20)\n",
     "\n",
-    "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
-    "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
-    "racines = []\n",
-    "temps_exec = []\n",
-    "nb_iter = []\n",
-    "ecart_rel = []\n",
-    "convergence = []\n",
+    "# Deuxième racine avec intervalle plus petit (2.7, 2.9)\n",
+    "ref2 = brentq(cubic_spline, 2.7, 2.9, xtol=1e-20)\n",
+    "\n",
+    "racines2 = []\n",
+    "temps_exec2 = []\n",
+    "nb_iter2 = []\n",
+    "ecart_rel2 = []\n",
+    "convergence2 = []\n",
     "\n",
     "for fct in liste_fct:\n",
     "    debut = perf_counter()\n",
     "    racine, n, conv = fct(cubic_spline, 2.7, 2.9)\n",
     "    fin = perf_counter()\n",
     "    temps = fin - debut\n",
-    "    ecart = (abs(racine-ref) / ref) * 100\n",
+    "    ecart = (abs(racine-ref2) / ref2) * 100\n",
     "    \n",
-    "    racines.append(f\"{racine}\")\n",
-    "    nb_iter.append(f\"{n}\")\n",
-    "    temps_exec.append(f\"{temps}\")\n",
-    "    ecart_rel.append(f\"{ecart}\")\n",
-    "    convergence.append(conv)\n",
+    "    racines2.append(f\"{racine}\")\n",
+    "    nb_iter2.append(f\"{n}\")\n",
+    "    temps_exec2.append(f\"{temps}\")\n",
+    "    ecart_rel2.append(f\"{ecart}\")\n",
+    "    convergence2.append(conv)\n",
     "\n",
-    "data = {\n",
-    "    \"Racine trouvée\": racines,\n",
-    "    \"Nombre d'itérations\": nb_iter,\n",
-    "    \"Temps d'éxecution\": temps_exec,\n",
-    "    \"Écart relatif\": ecart_rel,\n",
+    "data2 = {\n",
+    "    \"Racine trouvée\": racines2,\n",
+    "    \"Nombre d'itérations\": nb_iter2,\n",
+    "    \"Temps d'éxecution\": temps_exec2,\n",
+    "    \"Écart relatif\": ecart_rel2,\n",
     "}\n",
     "\n",
-    "df2 = pd.DataFrame(data, index=noms)\n",
+    "df2 = pd.DataFrame(data2, index=noms)\n",
     "\n",
     "print(f\"\\n\\n{df2}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 463,
-   "id": "32597370",
+   "cell_type": "markdown",
+   "id": "7af91d69",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Racine trouvée</th>\n",
-       "      <th>Nombre d'itérations</th>\n",
-       "      <th>Temps d'éxecution</th>\n",
-       "      <th>Écart relatif</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Dichotomie</th>\n",
-       "      <td>2.826723718643188</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0.0001875000016298145</td>\n",
-       "      <td>1.0086529764251262e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sécante</th>\n",
-       "      <td>2.826723715791775</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6.350001785904169e-05</td>\n",
-       "      <td>8.122269615874137e-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dekker</th>\n",
-       "      <td>2.826723715791775</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8.180001168511808e-05</td>\n",
-       "      <td>8.122269615874137e-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Brent</th>\n",
-       "      <td>2.826723715796209</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9.980000322684646e-05</td>\n",
-       "      <td>1.487302252485115e-10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Racine trouvée Nombre d'itérations      Temps d'éxecution  \\\n",
-       "Dichotomie  2.826723718643188                  22  0.0001875000016298145   \n",
-       "Sécante     2.826723715791775                   5  6.350001785904169e-05   \n",
-       "Dekker      2.826723715791775                   5  8.180001168511808e-05   \n",
-       "Brent       2.826723715796209                   5  9.980000322684646e-05   \n",
-       "\n",
-       "                     Écart relatif  \n",
-       "Dichotomie  1.0086529764251262e-07  \n",
-       "Sécante      8.122269615874137e-12  \n",
-       "Dekker       8.122269615874137e-12  \n",
-       "Brent        1.487302252485115e-10  "
-      ]
-     },
-     "execution_count": 463,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df2"
+    "# Résultats - Stabilité et Robustesse #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 15,
    "id": "adcacafb",
    "metadata": {},
    "outputs": [
@@ -568,17 +485,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Bornes même signe:\n",
       "1.0000096448756775\n",
-      "                Racine trouvée Nombre d'itérations\n",
-      "Dichotomie  0.2499999999963621                  36\n",
-      "Sécante                3934.75                  90\n",
-      "Dekker                    1.25                   7\n",
-      "Brent       0.2500000000074259                   6\n",
+      "\n",
+      "Fonction plate près de la racine:\n",
       "                Racine trouvée Nombre d'itérations\n",
       "Dichotomie           0.9921875                   7\n",
       "Sécante     1.0092880370898374                  35\n",
       "Dekker      1.0092880370898374                  35\n",
       "Brent       0.9969664348966029                  14\n",
+      "\n",
+      "3 racines à l'intérieur des bornes:\n",
+      "                Racine trouvée Nombre d'itérations\n",
+      "Dichotomie  0.2499999999963621                  36\n",
+      "Sécante                3934.75                  90\n",
+      "Dekker                    1.25                   7\n",
+      "Brent       0.2500000000074259                   6\n",
+      "\n",
+      "Une borne près d'une autre racine:\n",
       "                Racine trouvée Nombre d'itérations\n",
       "Dichotomie  1.0000000000232832                  35\n",
       "Sécante                   -0.5                   9\n",
@@ -600,33 +524,13 @@
     "def f4(x):\n",
     "    return 2 * x**2 - x - 1\n",
     "\n",
-    "\n",
+    "# Bornes qui ne sont pas de signes opposés\n",
+    "print(\"Bornes même signe:\")\n",
     "print(methode_secante(f1, 0, 1.5)[0])\n",
     "# Autres méthodes ne fontionnent pas, car les bornes n'ont pas de signes opposés\n",
     "\n",
     "\n",
-    "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
-    "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
-    "racines = []\n",
-    "nb_iter = []\n",
-    "convergence = []\n",
-    "\n",
-    "for fct in liste_fct:\n",
-    "    racine, n, conv = fct(f3, 0, 1.35)\n",
-    "    \n",
-    "    \n",
-    "    racines.append(f\"{racine}\")\n",
-    "    nb_iter.append(f\"{n}\")\n",
-    "    convergence.append(conv)\n",
-    "\n",
-    "data = {\n",
-    "    \"Racine trouvée\": racines,\n",
-    "    \"Nombre d'itérations\": nb_iter,\n",
-    "}\n",
-    "\n",
-    "df = pd.DataFrame(data, index=noms)\n",
-    "print(df)\n",
-    "\n",
+    "# Fonction plate près de la racine\n",
     "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
     "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
     "racines = []\n",
@@ -636,6 +540,7 @@
     "for fct in liste_fct:\n",
     "    racine, n, conv = fct(f2, -3, 4)\n",
     "    \n",
+    "    \n",
     "    racines.append(f\"{racine}\")\n",
     "    nb_iter.append(f\"{n}\")\n",
     "    convergence.append(conv)\n",
@@ -646,10 +551,34 @@
     "}\n",
     "\n",
     "df = pd.DataFrame(data, index=noms)\n",
+    "print(\"\\nFonction plate près de la racine:\")\n",
     "print(df)\n",
     "\n",
-    "liste_fct = [methode_bissection, methode_secante, methode_dekker, methode_brent]\n",
-    "noms = [\"Dichotomie\", \"Sécante\", \"Dekker\", \"Brent\"]\n",
+    "\n",
+    "\n",
+    "# 3 racines à l'intérieur des bornes\n",
+    "racines = []\n",
+    "nb_iter = []\n",
+    "convergence = []\n",
+    "\n",
+    "for fct in liste_fct:\n",
+    "    racine, n, conv = fct(f3, 0, 1.35)\n",
+    "    \n",
+    "    racines.append(f\"{racine}\")\n",
+    "    nb_iter.append(f\"{n}\")\n",
+    "    convergence.append(conv)\n",
+    "\n",
+    "data = {\n",
+    "    \"Racine trouvée\": racines,\n",
+    "    \"Nombre d'itérations\": nb_iter,\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data, index=noms)\n",
+    "print(\"\\n3 racines à l'intérieur des bornes:\")\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "# Une borne près d'une autre racine\n",
     "racines = []\n",
     "nb_iter = []\n",
     "convergence = []\n",
@@ -667,6 +596,7 @@
     "}\n",
     "\n",
     "df = pd.DataFrame(data, index=noms)\n",
+    "print(\"\\nUne borne près d'une autre racine:\")\n",
     "print(df)\n",
     "\n"
    ]
