--- a/methode_brent.ipynb
+++ b/methode_brent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "id": "e5b0c2c1",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "id": "3d0bb557",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "id": "e1118370",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "id": "76716542",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "id": "7e3879d4",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "id": "4608004a",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "id": "b8ba5f7a",
    "metadata": {},
    "outputs": [
@@ -364,28 +364,28 @@
        "      <th>Dichotomie</th>\n",
        "      <td>2.158176407217979</td>\n",
        "      <td>26</td>\n",
-       "      <td>0.000208500016015023</td>\n",
+       "      <td>0.00021379999816417694</td>\n",
        "      <td>4.8730773840587336e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sécante</th>\n",
        "      <td>2.158176406584893</td>\n",
        "      <td>9</td>\n",
-       "      <td>9.779998799785972e-05</td>\n",
+       "      <td>0.00010030000703409314</td>\n",
        "      <td>1.9396469831107594e-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Dekker</th>\n",
        "      <td>2.158176406193377</td>\n",
        "      <td>8</td>\n",
-       "      <td>0.00011490000179037452</td>\n",
+       "      <td>0.00011630001245066524</td>\n",
        "      <td>1.255406305783921e-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Brent</th>\n",
        "      <td>2.1581764061662834</td>\n",
        "      <td>7</td>\n",
-       "      <td>0.00012059998698532581</td>\n",
+       "      <td>0.00012440001592040062</td>\n",
        "      <td>2.057705795417015e-14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -394,10 +394,10 @@
       ],
       "text/plain": [
        "                Racine trouvée Nombre d'itérations       Temps d'éxecution  \\\n",
-       "Dichotomie   2.158176407217979                  26    0.000208500016015023   \n",
-       "Sécante      2.158176406584893                   9   9.779998799785972e-05   \n",
-       "Dekker       2.158176406193377                   8  0.00011490000179037452   \n",
-       "Brent       2.1581764061662834                   7  0.00012059998698532581   \n",
+       "Dichotomie   2.158176407217979                  26  0.00021379999816417694   \n",
+       "Sécante      2.158176406584893                   9  0.00010030000703409314   \n",
+       "Dekker       2.158176406193377                   8  0.00011630001245066524   \n",
+       "Brent       2.1581764061662834                   7  0.00012440001592040062   \n",
        "\n",
        "                     Écart relatif  \n",
        "Dichotomie  4.8730773840587336e-08  \n",
@@ -406,7 +406,7 @@
        "Brent        2.057705795417015e-14  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "id": "aaf7a106",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "id": "a22d890c",
    "metadata": {},
    "outputs": [
@@ -547,28 +547,28 @@
        "      <th>Dichotomie</th>\n",
        "      <td>2.826723718643188</td>\n",
        "      <td>22</td>\n",
-       "      <td>0.00019079999765381217</td>\n",
+       "      <td>0.00022610000451095402</td>\n",
        "      <td>1.0086529764251262e-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sécante</th>\n",
        "      <td>2.826723715791775</td>\n",
        "      <td>5</td>\n",
-       "      <td>8.439997327513993e-05</td>\n",
+       "      <td>6.210000719875097e-05</td>\n",
        "      <td>8.122269615874137e-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Dekker</th>\n",
        "      <td>2.826723715791775</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.00010190001921728253</td>\n",
+       "      <td>7.9699995694682e-05</td>\n",
        "      <td>8.122269615874137e-12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Brent</th>\n",
        "      <td>2.826723715796209</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.00011619998258538544</td>\n",
+       "      <td>9.950000094249845e-05</td>\n",
        "      <td>1.487302252485115e-10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -577,10 +577,10 @@
       ],
       "text/plain": [
        "               Racine trouvée Nombre d'itérations       Temps d'éxecution  \\\n",
-       "Dichotomie  2.826723718643188                  22  0.00019079999765381217   \n",
-       "Sécante     2.826723715791775                   5   8.439997327513993e-05   \n",
-       "Dekker      2.826723715791775                   5  0.00010190001921728253   \n",
-       "Brent       2.826723715796209                   5  0.00011619998258538544   \n",
+       "Dichotomie  2.826723718643188                  22  0.00022610000451095402   \n",
+       "Sécante     2.826723715791775                   5   6.210000719875097e-05   \n",
+       "Dekker      2.826723715791775                   5     7.9699995694682e-05   \n",
+       "Brent       2.826723715796209                   5   9.950000094249845e-05   \n",
        "\n",
        "                     Écart relatif  \n",
        "Dichotomie  1.0086529764251262e-07  \n",
@@ -589,7 +589,7 @@
        "Brent        1.487302252485115e-10  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "id": "adcacafb",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "id": "ffb4eaf7",
    "metadata": {},
    "outputs": [
@@ -753,7 +753,7 @@
        "Brent       0.9969664348966029                  14"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "id": "0a6efc0d",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
        "Brent       0.2500000000074259                   6"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "id": "d493b522",
    "metadata": {},
    "outputs": [
@@ -979,7 +979,7 @@
        "Brent       0.9999999999999996                   8"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
